# tiny-topdown-game

./: .gitignore  Cargo.toml
assets/map/: basic.tmx  basic.tsx  basic_map.tmx  basic_tile.tsx  basic_tiles.tsx
src/: animation_system.rs  component.rs  game.rs  main.rs  map.rs  menu.rs  movement_system.rs  viewport.rs  viewport_system.rs
