[package]
name = "tiny-topdown-game"
version = "0.1.0"
authors = ["pholtz <pholtz@ycp.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
# piston = "0.52.0"
# piston_window = "0.116.0"
# piston2d-graphics = "0.39.0"
# pistoncore-glutin_window = "0.67.0"
# piston2d-opengl_graphics = "0.76.0"
find_folder = "0.3.0"
specs = "0.16.1"
specs-derive = "0.4.1"
# gfx = "0.18.1"
# gfx_device_gl = "0.16.2"
tiled = "0.9.3"
